--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     compile 'com.pawegio.kandroid:kandroid:0.7.0@aar'
     compile 'com.github.satyan:sugar:1.4'
     compile 'com.android.support:recyclerview-v7:25.1.0'
+    compile 'com.android.support:cardview-v7:25.1.0'
 }
 repositories {
     mavenCentral()
