--- a/purple/build.gradle
+++ b/purple/build.gradle
@@ -30,8 +30,8 @@ dependencies {
     implementation "com.android.support:design:$appCompatVersion"
     implementation 'com.pawegio.kandroid:kandroid:0.7.0@aar'
     implementation 'com.github.satyan:sugar:1.5'
-    implementation "io.reactivex.rxjava2:rxandroid:2.0.1"
-    implementation 'io.reactivex.rxjava2:rxjava:2.1.8'
+    implementation "io.reactivex.rxjava2:rxandroid:2.1.0"
+    implementation "io.reactivex.rxjava2:rxjava:2.2.2"
 
     testImplementation 'junit:junit:4.12'
 
