--- a/purple/src/main/AndroidManifest.xml
+++ b/purple/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         <meta-data android:name="QUERY_LOG" android:value="true" />
         <meta-data android:name="DOMAIN_PACKAGE_NAME" android:value="app.purple" />
 
-        <activity android:name="app.purple.mvp.views.activities.MainActivity">
+        <activity android:name="app.purple.features.home.views.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
